--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: <Your Name>
-description: <Your Description>
+title: Alexander Bartlett
+description: My datascience portfolio
 theme: jekyll-theme-cayman
