--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Alexander Bartlett
 description: My datascience portfolio
 github_username: alex2025space
-theme: jekyll-theme-cayman
+theme: prasad
